--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mypomodoro",
+  "name": "PomodoroVictoria",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,9 @@
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "expo-av": "~15.0.2",
+    "expo-notifications": "~0.29.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
